@startuml

title __GALLERY's Class Diagram__\n

  namespace com.fahadali.intranet {
    namespace fragments.ui.gallery {
      class com.fahadali.intranet.fragments.ui.gallery.GalleryFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace fragments.ui.gallery {
      class com.fahadali.intranet.fragments.ui.gallery.GalleryViewModel {
          - mText : MutableLiveData<String>
          + GalleryViewModel()
          + getText()
      }
    }
  }
  

  com.fahadali.intranet.fragments.ui.gallery.GalleryFragment -up-|> androidx.fragment.app.Fragment
  com.fahadali.intranet.fragments.ui.gallery.GalleryFragment o-- com.fahadali.intranet.fragments.ui.gallery.GalleryViewModel : galleryViewModel
  com.fahadali.intranet.fragments.ui.gallery.GalleryViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
